--- a/Stayfrosty 2D Game Engine/.classpath
+++ b/Stayfrosty 2D Game Engine/.classpath
@@ -11,5 +11,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/slick.jar"/>
+	<classpathentry kind="lib" path="lib/CPJD Tools Library 0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
