--- a/Stayfrosty 2D Game Engine/.project
+++ b/Stayfrosty 2D Game Engine/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Stayfrosty 2D Game Engine</name>
+	<name>DWK-Archives</name>
 	<comment></comment>
 	<projects>
 	</projects>
